# somehand

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml
configs/retargeting/: linkerhand_l10.yaml  linkerhand_l20.yaml  linkerhand_l20pro.yaml  linkerhand_l21.yaml  linkerhand_l25.yaml  linkerhand_l30.yaml  linkerhand_l6.yaml  linkerhand_lhg20.yaml  linkerhand_o6.yaml  linkerhand_o7.yaml  linkerhand_t12.yaml
configs/retargeting/base/: _universal_common.yaml  dex5.yaml  dexhand021.yaml  inspire_dfq.yaml  inspire_ftp.yaml  linkerhand_l10.yaml  linkerhand_l20.yaml  linkerhand_l20pro.yaml  linkerhand_l21.yaml  linkerhand_l25.yaml  linkerhand_l30.yaml  linkerhand_l6.yaml  linkerhand_lhg20.yaml  linkerhand_o6.yaml  linkerhand_o7.yaml  linkerhand_t12.yaml  omnihand.yaml  revo2.yaml  rohand.yaml  sharpa_wave.yaml  wujihand.yaml
configs/retargeting/bihand/: dex5_bihand.yaml  dexhand021_bihand.yaml  inspire_dfq_bihand.yaml  inspire_ftp_bihand.yaml  linkerhand_l10_bihand.yaml  linkerhand_l20_bihand.yaml  linkerhand_l21_bihand.yaml  linkerhand_l25_bihand.yaml  linkerhand_l6_bihand.yaml  linkerhand_o6_bihand.yaml  linkerhand_o7_bihand.yaml  omnihand_bihand.yaml  revo2_bihand.yaml  rohand_bihand.yaml  sharpa_wave_bihand.yaml
configs/retargeting/left/: dex5_left.yaml  inspire_dfq_left.yaml  inspire_ftp_left.yaml  linkerhand_l10_left.yaml  (+10 more)
docs/en/: README.md  api.md  assets-and-models.md  configuration.md  getting-started.md  maintainer-guide.md  runtime-modes.md  troubleshooting.md
docs/zh/: README.md  api.md  assets-and-models.md  configuration.md  getting-started.md  maintainer-guide.md  runtime-modes.md  troubleshooting.md
scripts/: acceptance_check.py  debug_thumb_direction.py  probe_pico_xrobotoolkit.py  render_all_videos.sh  retarget_video.py  retarget_webcam.py  setup_linkerhand_sdk.sh  setup_xrobotoolkit.sh
scripts/setup/: download_assets.py
src/dex_mujoco/: __init__.py  acceptance.py  cli.py  hand_detector.py  hc_mocap_input.py  landmark_visualization.py  paths.py  pico_input.py  retargeting_config.py  runtime.py  visualization.py
src/somehand/: __init__.py  acceptance.py  api.py  external_assets.py  hand_detector.py  hc_mocap_input.py  paths.py  pico_input.py  urdf_converter.py
tests/: conftest.py  test_acceptance.py  test_bihand.py  test_cli.py  test_config_model.py  test_controller.py  test_download_assets.py  test_hand_detector.py  test_hc_mocap_input.py  test_lazy_imports.py  test_paths.py  test_pico_input.py  test_preview.py  test_recording.py  test_session.py  test_source_adapters.py  test_urdf_converter.py  test_visualization.py
(+67 files in other folders)
